# idf-parser

./: .gitignore  Cargo.toml  README.md
.github/workflows/: check_pull_request.yaml  main.yaml  pull_request.yaml
src/: board.rs  component_placement.rs  components.rs  drilled_holes.rs  headers.rs  lib.rs  library.emp  library.rs  mod.rs  notes.rs  outlines.rs  panel.emn  point.rs  primitives.rs  validation.rs
src/test_files/: beaglebone.emn  beaglebone.emp  board.emn  esp.emn  esp.emp  invalid_panel.emn  panel.emn
